Last error file, added EOF lines and JSON blocks for the new files

--- a/docs/errors/sign-in.mdx
+++ b/docs/errors/sign-in.mdx
@@ -71,22 +71,28 @@ type: reference
 }
 
 ## `NoSecondFactorsForStrategy`
+```json
 {
     shortMessage: "no second factors",
     longMessage:  "No second factors were found for strategy <strategy>.",
     code:         "no_second_factors",
 }
+```
 
 ## `SignInNoIdentificationForUser`
+```json
 {
     shortMessage: "no identification for user",
     longMessage:  "The given token doesn't have an associated identification for the user who created it.",
     code:         "sign_in_no_identification_for_user",
 }
+```
 
 ## `SignInIdentificationOrUserDeleted`
+```json
 {
     shortMessage: "identification or user deleted",
     longMessage:  "Either the user or the selected identification were deleted. Please start over.",
     code:         "sign_in_identification_or_user_deleted",
 }
+```
