All the error codes are strings and fmt is a Go function not something relatable in JSON errors references

--- a/docs/errors/applications.mdx
+++ b/docs/errors/applications.mdx
@@ -14,7 +14,7 @@ Signifies an error when no application with given appID was found.
 {
     shortMessage: "Application not found",
     longMessage:  "No application was found with id " + appID,
-    code:         resource_not_found_code,
+    code:         "resource_not_found_code",
 }
 ```
 
@@ -27,7 +27,7 @@ Signifies an error when trying to delete a system application.
 {
     shortMessage: "Unauthorized request",
     longMessage:  "You are not authorized to delete system application " + applicationID,
-    code:         authorization_invalid_code,
+    code:         "authorization_invalid_code",
 }
 ```
 
@@ -38,9 +38,8 @@ Signifies an error when trying to move an application to an organization that th
 ```json 
 {
     shortMessage: "unauthorized request",
-    longMessage: fmt.Sprintf("You need to be a member of organization %s, in order to move application %s.",
-        organizationID, applicationID),
-    code: authorization_invalid_code,
+    longMessage: "You need to be a member of organization <OrgID>, in order to move application <AppID>.",
+    code: "authorization_invalid_code",
 }
 ```
 
@@ -50,7 +49,7 @@ Signifies an error when trying to move an application to an organization that th
 {
     shortMessage: "already belongs to organization",
     longMessage:  "Application already belongs to the selected organization.",
-    code:         application_already_belongs_to_organization_code,
+    code:         "application_already_belongs_to_organization_code",
 }
 ```
 
@@ -60,7 +59,7 @@ Signifies an error when trying to move an application to an organization that th
 {
     shortMessage: "already belongs to user",
     longMessage:  "Application already belongs to the given user.",
-    code:         application_already_belongs_to_user_code,
+    code:         "application_already_belongs_to_user_code",
 }
 ```
 
@@ -71,8 +70,8 @@ Returned when an invalid plan is selected for a resource.
 ```json 
 {
     shortMessage: "Invalid plan",
-    longMessage:  fmt.Sprintf("Plan %s can't be selected for %s %s", planID, resourceType, resourceID),
-    code:         invalid_plan,
+    longMessage:  "Plan <planID> can't be selected for <resourceType> <resourceID>", 
+    code:         "invalid_plan",
 }
 ```
 
@@ -82,7 +81,7 @@ Returned when an invalid plan is selected for a resource.
 {
     shortMessage: "cannot transfer paid application, missing billing info",
     longMessage:  "Paid applications can only be transferred to personal workspaces or organizations with billing info. Add the necessary billing info and try again.",
-    code:         transfer_paid_app_to_free_account_code,
+    code:         "transfer_paid_app_to_free_account_code",
 }
 ```
 
@@ -92,6 +91,6 @@ Returned when an invalid plan is selected for a resource.
 {
     shortMessage: "cannot transfer paid application, missing payment method",
     longMessage:  "The selected account doesn't have any payment methods associated with it.",
-    code:       transfer_paid_app_to_account_with_no_payment_method_code,
+    code:       "transfer_paid_app_to_account_with_no_payment_method_code",
 }
 ```
