--- a/docs/errors/clients.mdx
+++ b/docs/errors/clients.mdx
@@ -14,7 +14,7 @@ Signifies an error when no client is found with clientID.
 {
     shortMessage: "Client not found",
     longMessage:  "No client was found with id <clientID>",
-    code:         resource_not_found_code,
+    code:         "resource_not_found_code",
 }
 ```
 
@@ -26,6 +26,6 @@ Signifies an error when no client is found in an incoming request.
 {
     shortMessage: "No client found",
     longMessage:  "This request is expecting a client and did not find one",
-    code:         client_not_found_code,
+    code:         "client_not_found_code",
 }
 ```
