--- a/docs/errors/deprecation.mdx
+++ b/docs/errors/deprecation.mdx
@@ -12,6 +12,6 @@ type: reference
 {
     shortMessage: "endpoint is deprecated and pending removal",
     longMessage:  message,
-    code:         api_operation_deprecated_code,
+    code:         "api_operation_deprecated_code",
 }
 ```
