--- a/docs/errors/domains.mdx
+++ b/docs/errors/domains.mdx
@@ -14,7 +14,7 @@ Signifies an error when no domain with the given id was found.
 {
     shortMessage: "Domain not found",
     longMessage:  "No domain was found with <id>",
-    code:         resource_not_found_code,
+    code:         "resource_not_found_code",
 }
 ```
 
@@ -26,7 +26,7 @@ Signifies an error when trying to update an non production instance domain.
 {
     shortMessage: "Domain update was forbidden",
     longMessage:  "Domain can be only updated for production instances",
-    code:         domain_update_forbidden_code,
+    code:         "domain_update_forbidden_code",
 }
 ```
 
@@ -36,7 +36,7 @@ Signifies an error when trying to update an non production instance domain.
 {
     shortMessage: "operation not allowed",
     longMessage:  "This operation is not allowed on a satellite domain. Try again using the primary domain of your instance.",
-    code:         operation_not_allowed_on_satellite_domain_code,
+    code:         "operation_not_allowed_on_satellite_domain_code",
 }
 ```
 
@@ -46,7 +46,7 @@ Signifies an error when trying to update an non production instance domain.
 {
     shortMessage: "operation not allowed",
     longMessage:  "This operation is not allowed on a primary domain. Try again with a satellite domain of the instance.",
-    code:         operation_not_allowed_on_primary_domain_code,
+    code:         "operation_not_allowed_on_primary_domain_code",
 
 }
 ```
@@ -59,7 +59,7 @@ Signifies an error when the nonce that was given during the sync flow is already
 {
     shortMessage: "sync nonce already consumed",
     longMessage:  "The given sync nonce has already been consumed and cannot be re-used.",
-    code:         sync_nonce_already_consumed_code,
+    code:         "sync_nonce_already_consumed_code",
 }
 ```
 
@@ -72,7 +72,7 @@ Signifies an error when a new domain is added as primary when there is already o
 
     shortMessage: "primary domain already exists",
     longMessage:  "Currently, only a single primary domain is supported and the current instance already has one. All new domains need to be set a satellites.",
-    code:         primary_domain_already_exists_code,
+    code:         "primary_domain_already_exists_code",
 }
 ```
 
@@ -81,6 +81,6 @@ Signifies an error when a new domain is added as primary when there is already o
 ```json
 {
     longMessage:  "Clerk Frontend API cannot be accessed through the proxy URL. Make sure your proxy is configured correctly.",
-    code:         invalid_proxy_configuration_code,
+    code:         "invalid_proxy_configuration_code",
 }
 ```
