--- a/docs/errors/blocklist-identifiers.mdx
+++ b/docs/errors/blocklist-identifiers.mdx
@@ -12,7 +12,7 @@ type: reference
 {
     shortMessage: "duplicate blocklist identifier",
     longMessage:  "the identifier <identifier> already exists",
-    code:         duplicate_record_code,
+    code:         "duplicate_record_code",
 }
 ```
 
@@ -22,6 +22,6 @@ type: reference
 {
     shortMessage: "Identifier not found",
     longMessage:  "No identifier was found with id <identifierID>",
-    code:         resource_not_found_code,
+    code:         "resource_not_found_code",
 }
 ```
