--- a/docs/errors/comms.mdx
+++ b/docs/errors/comms.mdx
@@ -14,7 +14,7 @@ Signifies an error when comm is not found.
 {
     shortMessage: "Resource not found",
     longMessage:  "No resource was found for ID <resourceID>",
-    code:         resource_not_found_code,
+    code:         "resource_not_found_code",
 }
 ```
 
@@ -26,7 +26,7 @@ Signifies an error when trying to delete the last identification associated with
 {
     shortMessage: "Deletion failed",
     longMessage:  "You cannot delete your last identification.",
-    code:         identification_deletion_failed_code,
+    code:         "identification_deletion_failed_code",
 }
 ```
 
@@ -36,7 +36,7 @@ Signifies an error when trying to delete the last identification associated with
 {
     shortMessage: "Deleting your last <sanitizedIdentType> is prohibited",
     longMessage:  "You are required to maintain at least one <sanitizedIdentType> in your account at all times",
-    code:         last_required_identification_deletion_failed_code,
+    code:         "last_required_identification_deletion_failed_code",
 }
 ```
 
@@ -46,7 +46,7 @@ Signifies an error when trying to delete the last identification associated with
 {
     shortMessage: "Update failed",
     longMessage:  "You cannot set your last identification as second factor.",
-    code:         identification_set_for2_f_a_failed_code,
+    code:         "identification_set_for2_f_a_failed_code",
 }
 ```
 
@@ -56,6 +56,6 @@ Signifies an error when trying to delete the last identification associated with
 {
     shortMessage: "Update failed",
     longMessage:  "Cannot update second factor attributes for unverified identification",
-    code:         identification_update_second_factor_unverified,
+    code:         "identification_update_second_factor_unverified",
 }
 ```
