--- a/docs/errors/cookie.mdx
+++ b/docs/errors/cookie.mdx
@@ -14,7 +14,7 @@ Signifies an error when token is missing claim.
 {
     shortMessage: invalidCookieMessage,
     longMessage:  "The token is missing the following claims: <claims>",
-    code:         cookie_invalid_code,
+    code:         "cookie_invalid_code",
 }
 ```
 
@@ -24,7 +24,7 @@ Signifies an error when cookie is invalid.
 ```json
 {
     shortMessage: "The provided cookie is invalid.",
-    code:         cookie_invalid_code,
+    code:         "cookie_invalid_code",
 }
 ```
 
@@ -36,6 +36,6 @@ Signifies an error when rotating token does not match the client's rotating toke
 {
     shortMessage: invalidCookieMessage,
     longMessage:  "The client's rotating key does not match the given one <token>",
-    code:         cookie_invalid_code,
+    code:         "cookie_invalid_code",
 }
 ```
