--- a/docs/errors/features.mdx
+++ b/docs/errors/features.mdx
@@ -12,7 +12,7 @@ type: reference
 {
     shortMessage: "not enabled",
     longMessage:  "This feature is not enabled on this instance",
-    code:         feature_not_enabled_code,
+    code:         "feature_not_enabled_code",
 }
 ```
 
@@ -22,7 +22,7 @@ type: reference
 {
     shortMessage: "not implemented",
     longMessage:  "Feature `<feature>` is not available yet",
-    code:         feature_not_implemented_code,
+    code:         "feature_not_implemented_code",
 }
 ```
 
@@ -32,6 +32,6 @@ type: reference
 {
     shortMessage: "not a Progressive Sign Up instance",
     longMessage: "<feature> can only be used in instances that migrated to Progressive Sign Up (https://clerk.com/docs/upgrade-guides/progressive-sign-up)",
-    code: feature_requires_psu_code,
+    code: "feature_requires_psu_code",
 }
 ```
