quotes on everything for valid JSON

--- a/docs/errors/applications.mdx
+++ b/docs/errors/applications.mdx
@@ -69,9 +69,9 @@ Returned when an invalid plan is selected for a resource.
 
 ```json 
 {
-    shortMessage: "Invalid plan",
-    longMessage:  "Plan <planID> can't be selected for <resourceType> <resourceID>", 
-    code:         "invalid_plan",
+    "shortMessage": "Invalid plan",
+    "longMessage":  "Plan <planID> can't be selected for <resourceType> <resourceID>", 
+    "code":         "invalid_plan",
 }
 ```
 
@@ -79,9 +79,9 @@ Returned when an invalid plan is selected for a resource.
 
 ```json 
 {
-    shortMessage: "cannot transfer paid application, missing billing info",
-    longMessage:  "Paid applications can only be transferred to personal workspaces or organizations with billing info. Add the necessary billing info and try again.",
-    code:         "transfer_paid_app_to_free_account_code",
+    "shortMessage": "cannot transfer paid application, missing billing info",
+    "longMessage":  "Paid applications can only be transferred to personal workspaces or organizations with billing info. Add the necessary billing info and try again.",
+    "code":         "transfer_paid_app_to_free_account_code",
 }
 ```
 
@@ -89,8 +89,8 @@ Returned when an invalid plan is selected for a resource.
 
 ```json 
 {
-    shortMessage: "cannot transfer paid application, missing payment method",
-    longMessage:  "The selected account doesn't have any payment methods associated with it.",
-    code:       "transfer_paid_app_to_account_with_no_payment_method_code",
+    "shortMessage": "cannot transfer paid application, missing payment method",
+    "longMessage":  "The selected account doesn't have any payment methods associated with it.",
+    "code":       "transfer_paid_app_to_account_with_no_payment_method_code",
 }
 ```
