--- a/docs/errors/billing-accounts.mdx
+++ b/docs/errors/billing-accounts.mdx
@@ -10,9 +10,9 @@ type: reference
 
 ```json
 {
-    shortMessage: "Billing account not found",
-    longMessage:  "No billing account was found with ID <baID>",
-    code:         "resource_not_found_code",
+    "shortMessage": "Billing account not found",
+    "longMessage":  "No billing account was found with ID <baID>",
+    "code":         "resource_not_found_code",
 }
 ```
 
@@ -20,9 +20,9 @@ type: reference
 
 ```json
 {
-    shortMessage: "Billing account not accessible",
-    longMessage: "Billing account <baID> is not accessible by user <userID>",
-    code: "billing_account_not_accessible_code",
+    "shortMessage": "Billing account not accessible",
+    "longMessage": "Billing account <baID> is not accessible by user <userID>",
+    "code": "billing_account_not_accessible_code",
 }
 ```
 
@@ -30,8 +30,8 @@ type: reference
 
 ```json
 {
-    shortMessage: "Billing account without customer ID",
-    longMessage:  "Billing account <baID> does not have a Stripe Customer ID",
-    code:         "billing_account_without_customer_id_code",
+    "shortMessage": "Billing account without customer ID",
+    "longMessage":  "Billing account <baID> does not have a Stripe Customer ID",
+    "code":         "billing_account_without_customer_id_code",
 }
 ```
