--- a/docs/errors/blocklist-identifiers.mdx
+++ b/docs/errors/blocklist-identifiers.mdx
@@ -10,9 +10,9 @@ type: reference
 
 ```json
 {
-    shortMessage: "duplicate blocklist identifier",
-    longMessage:  "the identifier <identifier> already exists",
-    code:         "duplicate_record_code",
+    "shortMessage": "duplicate blocklist identifier",
+    "longMessage":  "the identifier <identifier> already exists",
+    "code":         "duplicate_record_code",
 }
 ```
 
@@ -20,8 +20,8 @@ type: reference
 
 ```json
 {
-    shortMessage: "Identifier not found",
-    longMessage:  "No identifier was found with id <identifierID>",
-    code:         "resource_not_found_code",
+    "shortMessage": "Identifier not found",
+    "longMessage":  "No identifier was found with id <identifierID>",
+    "code":         "resource_not_found_code",
 }
 ```
