--- a/docs/errors/comms.mdx
+++ b/docs/errors/comms.mdx
@@ -12,9 +12,9 @@ Signifies an error when comm is not found.
 
 ```json
 {
-    shortMessage: "Resource not found",
-    longMessage:  "No resource was found for ID <resourceID>",
-    code:         "resource_not_found_code",
+    "shortMessage": "Resource not found",
+    "longMessage":  "No resource was found for ID <resourceID>",
+    "code":         "resource_not_found_code",
 }
 ```
 
@@ -24,9 +24,9 @@ Signifies an error when trying to delete the last identification associated with
 
 ```json
 {
-    shortMessage: "Deletion failed",
-    longMessage:  "You cannot delete your last identification.",
-    code:         "identification_deletion_failed_code",
+    "shortMessage": "Deletion failed",
+    "longMessage":  "You cannot delete your last identification.",
+    "code":         "identification_deletion_failed_code",
 }
 ```
 
@@ -34,9 +34,9 @@ Signifies an error when trying to delete the last identification associated with
 
 ```json
 {
-    shortMessage: "Deleting your last <sanitizedIdentType> is prohibited",
-    longMessage:  "You are required to maintain at least one <sanitizedIdentType> in your account at all times",
-    code:         "last_required_identification_deletion_failed_code",
+    "shortMessage": "Deleting your last <sanitizedIdentType> is prohibited",
+    "longMessage":  "You are required to maintain at least one <sanitizedIdentType> in your account at all times",
+    "code":         "last_required_identification_deletion_failed_code",
 }
 ```
 
@@ -44,9 +44,9 @@ Signifies an error when trying to delete the last identification associated with
 
 ```json
 {
-    shortMessage: "Update failed",
-    longMessage:  "You cannot set your last identification as second factor.",
-    code:         "identification_set_for2_f_a_failed_code",
+    "shortMessage": "Update failed",
+    "longMessage":  "You cannot set your last identification as second factor.",
+    "code":         "identification_set_for2_f_a_failed_code",
 }
 ```
 
@@ -54,8 +54,8 @@ Signifies an error when trying to delete the last identification associated with
 
 ```json
 {
-    shortMessage: "Update failed",
-    longMessage:  "Cannot update second factor attributes for unverified identification",
-    code:         "identification_update_second_factor_unverified",
+    "shortMessage": "Update failed",
+    "longMessage":  "Cannot update second factor attributes for unverified identification",
+    "code":         "identification_update_second_factor_unverified",
 }
 ```
