--- a/docs/errors/db.mdx
+++ b/docs/errors/db.mdx
@@ -10,8 +10,8 @@ type: reference
 
 ```json
 {
-    shortMessage: "duplicate allowlist identifier",
-    longMessage:  "the identifier <identifier> already exists",
-    code:         "duplicate_record_code",
+    "shortMessage": "duplicate allowlist identifier",
+    "longMessage":  "the identifier <identifier> already exists",
+    "code":         "duplicate_record_code",
 }
 ```
