--- a/docs/errors/deprecation.mdx
+++ b/docs/errors/deprecation.mdx
@@ -10,8 +10,8 @@ type: reference
 
 ```json
 {
-    shortMessage: "endpoint is deprecated and pending removal",
-    longMessage:  message,
-    code:         "api_operation_deprecated_code",
+    "shortMessage": "endpoint is deprecated and pending removal",
+    "longMessage":  message,
+    "code":         "api_operation_deprecated_code",
 }
 ```
