--- a/docs/errors/sign-in-tokens.mdx
+++ b/docs/errors/sign-in-tokens.mdx
@@ -6,109 +6,48 @@ type: reference
 
 # Sign in tokens errors index
 
-## `SingleModeSessionExists`
+
+## `SignInTokenRevoked`
 ```json
 {
- shortMessage: "Session already exists"
- longMessage: "You're currently in single session mode. You can only be signed into one account at a time."
- code: "session_exists"
+ "shortMessage": "sign in token has been revoked"
+ "longMessage": "This sign in token has been revoked and cannot be used anymore."
+ "code": "sign_in_token_revoked_code"
 }
 ```
 
-## `AlreadySignedIn`
+## `SignInTokenAlreadyUsed`
 ```json
 {
- shortMessage: "You're already signed in"
- code: "identifier_already_signed_in"
- meta: sessionMeta{SessionID: sessionID}
+ "shortMessage": "sign in token has already been used"
+ "longMessage": "This sign in token has already been used. Each token can only be used once."
+ "code": "sign_in_token_already_used_code"
 }
 ```
 
-## `AccountTransferInvalid`
+## `SignInTokenCannotBeUsed`
 ```json
 {
- shortMessage: "Invalid account transfer"
- longMessage: "There is no account to transfer"
- code: "account_transfer_invalid"
+ "shortMessage": "sign in token cannot be used"
+ "longMessage": "This sign in token cannot be used anymore. Please request a new one."
+ "code": "sign_in_token_cannot_be_used_code"
 }
 ```
 
-## `InvalidClientStateForAction`
+## `SignInTokenCanBeUsedOnlyInSignIn`
 ```json
 {
- shortMessage: "Invalid action"
- longMessage: "We were unable to complete %s for this Client. %s"
- code: "client_state_invalid"
+ "shortMessage": "not in sign in"
+ "longMessage": "Sign in tokens can only be used during sign in."
+ "code": "sign_in_token_not_in_sign_in_code"
 }
 ```
 
-## `InvalidStrategyForUser`
+## `SignInTokenCannotBeRevoked`
 ```json
 {
- shortMessage: "Invalid verification strategy"
- longMessage: "The verification strategy is not valid for this account"
- code: "strategy_for_user_invalid"
-}
-```
-
-## `IdentificationClaimed`
-```json
-{
- shortMessage: "Identification claimed by another user"
- longMessage: "One or more identifiers on this sign up have since been connected to a different User. Please sign up again."
- code: "identification_claimed"
-}
-```
-
-## `MutationOnOlderSignInNotAllowed`
-```json
-{
- shortMessage: "Update operations are not allowed on older sign ins"
- code: "resource_forbidden"
-}
-```
-
-## `SignInNotFound`
-```json
-{
- shortMessage: "not found"
- longMessage: "No sign in was found with id " + signInID
- code: "resource_not_found"
-}
-```
-
-## `IdentificationBelongsToDifferentUser`
-```json
-{
- shortMessage: "belongs to a different user"
- longMessage: "The given identification belongs to a different user."
- code: "resource_forbidden"
-}
-```
-
-## `NoSecondFactorsForStrategy`
-```json
-{
- shortMessage: "no second factors"
- longMessage: "No second factors were found for strategy %s."
- code: "no_second_factors_for_strategy"
-}
-```
-
-## `SignInNoIdentificationForUser`
-```json
-{
- shortMessage: "no identification for user"
- longMessage: "The given token doesn't have an associated identification for the user who created it."
- code: "sign_in_no_identification_for_user"
-}
-```
-
-## `SignInIdentificationOrUserDeleted`
-```json
-{
- shortMessage: "identification or user deleted"
- longMessage: "Either the user or the selected identification were deleted. Please start over."
- code: "sign_in_identification_or_user_deleted"
+ "shortMessage": "cannot revoke"
+ "longMessage": "Sign in token cannot be revoked because its status is %s. Only pending tokens can be revoked."
+ "code": "sign_in_token_cannot_be_revoked_code"
 }
 ```
