--- a/docs/errors/sign-up.mdx
+++ b/docs/errors/sign-up.mdx
@@ -25,34 +25,34 @@ type: reference
 ## `SignUpCannotBeUpdated`
 ```json
 {
- shortMessage: "Sign up cannot be updated"
- longMessage: "This sign up has reached a terminal state and cannot be updated"
- code: "sign_up_cannot_be_updated"
+ "shortMessage": "Sign up cannot be updated"
+ "longMessage": "This sign up has reached a terminal state and cannot be updated"
+ "code": "sign_up_cannot_be_updated"
 }
 ```
 
 ## `CaptchaNotEnabled`
 ```json
 {
- shortMessage: "CAPTCHA not enabled"
- longMessage: "Bot detection can be applied only for production instances which have enabled CAPTCHA."
- code: "captcha_not_enabled"
+ "shortMessage": "CAPTCHA not enabled"
+ "longMessage": "Bot detection can be applied only for production instances which have enabled CAPTCHA."
+ "code": "captcha_not_enabled"
 }
 ```
 
 ## `CaptchaInvalid`
 ```json
 {
- shortMessage: "Invalid token"
- code: "captcha_invalid"
+ "shortMessage": "Invalid token"
+ "code": "captcha_invalid"
 }
 ```
 
 ## `SignUpOutdatedVerification`
 ```json
 {
- shortMessage: "Outdated verification"
- longMessage: "There is a more recent verification pending for this signup. Try attempting the verification again."
- code: "sign_up_outdated_verification"
+ "shortMessage": "Outdated verification"
+ "longMessage": "There is a more recent verification pending for this signup. Try attempting the verification again."
+ "code": "sign_up_outdated_verification"
 }
 ```
