--- a/docs/errors/actor-tokens.mdx
+++ b/docs/errors/actor-tokens.mdx
@@ -10,9 +10,9 @@ type: reference
 
 ```json
 {
-    shortMessage: "actor token has been revoked",
-    longMessage:  "This actor token has been revoked and cannot be used anymore.",
-    code:         actor_token_revoked_code,
+    "shortMessage": "actor token has been revoked",
+    "longMessage":  "This actor token has been revoked and cannot be used anymore.",
+    "code":         "actor_token_revoked_code",
 }
 ```
 
@@ -20,9 +20,9 @@ type: reference
 
 ```json
 {
-    shortMessage: "actor token has already been used",
-    longMessage:  "This actor token has already been used. Each token can only be used once.",
-    code:         actor_token_already_used_code,
+    "shortMessage": "actor token has already been used",
+    "longMessage":  "This actor token has already been used. Each token can only be used once.",
+    "code":         "actor_token_already_used_code",
 }
 ```
 
@@ -30,9 +30,9 @@ type: reference
 
 ```json
 {
-    shortMessage: "actor token cannot be used",
-    longMessage:  "This actor token cannot be used anymore. Please request a new one.",
-    code:         actor_token_cannot_be_used_code,
+    "shortMessage": "actor token cannot be used",
+    "longMessage":  "This actor token cannot be used anymore. Please request a new one.",
+    "code":         "actor_token_cannot_be_used_code",
 }
 ```
 
@@ -40,9 +40,9 @@ type: reference
 
 ```json
 {
-    shortMessage: "not in sign in",
-    longMessage:  "Actor tokens can only be used during sign in.",
-    code:         actor_token_not_in_sign_in_code,
+    "shortMessage": "not in sign in",
+    "longMessage":  "Actor tokens can only be used during sign in.",
+    "code":         "actor_token_not_in_sign_in_code",
 }
 ```
 
@@ -50,9 +50,9 @@ type: reference
 
 ```json
 {
-    shortMessage: "user not found",
-    longMessage:  "The user of the actor token no longer exists. Please request a new one.",
-    code:         actor_token_subject_not_found_code,
+    "shortMessage": "user not found",
+    "longMessage":  "The user of the actor token no longer exists. Please request a new one.",
+    "code":         "actor_token_subject_not_found_code",
 }
 ```
 
@@ -60,8 +60,8 @@ type: reference
 
 ```json
 {
-    shortMessage: "cannot revoke",
-    longMessage:  fmt.Sprintf("Actor token cannot be revoked because its status is %s. Only pending tokens can be revoked.", status),
-    code:         actor_token_cannot_be_revoked_code,
+    "shortMessage": "cannot revoke",
+    "longMessage":  "Actor token cannot be revoked because its status is <status>. Only pending tokens can be revoked.", 
+    "code":         "actor_token_cannot_be_revoked_code",
 }
 ```
