--- a/docs/errors/allowlist-identifiers.mdx
+++ b/docs/errors/allowlist-identifiers.mdx
@@ -10,8 +10,8 @@ type: reference
 
 ```json
 {
-    shortMessage: "Identifier not found",
-    longMessage:  "No identifier was found with id " + identifierID,
-    code:         resource_not_found_code,
+    "shortMessage": "Identifier not found",
+    "longMessage":  "No identifier was found with id " + identifierID,
+    "code":         "resource_not_found_code",
 }
 ```
