--- a/docs/errors/auth.mdx
+++ b/docs/errors/auth.mdx
@@ -12,8 +12,8 @@ Signifies an error when the supplied client key is invalid.
 
 ```json
 {
-    shortMessage: "The provided Clerk Secret Key is invalid. Make sure that your Clerk Secret Key is correct.",
-    code:         "clerk_key_invalid_code",
+    "shortMessage": "The provided Clerk Secret Key is invalid. Make sure that your Clerk Secret Key is correct.",
+    "code":         "clerk_key_invalid_code",
 }
 ```
 
@@ -23,9 +23,9 @@ Signifies an error when the request is not authenticated.
 
 ```json
 {
-    shortMessage: "Invalid authentication",
-    longMessage:  "Unable to authenticate the request, you need to supply an active session",
-    code:         "authentication_invalid_code",
+    "shortMessage": "Invalid authentication",
+    "longMessage":  "Unable to authenticate the request, you need to supply an active session",
+    "code":         "authentication_invalid_code",
 }
 ```
 
@@ -35,9 +35,9 @@ Signifies an error when the Authorization header has no proper format.
 
 ```json
 {
-    shortMessage: "Invalid Authorization header format",
-    longMessage:  `Invalid Authorization header format. Must be "Bearer <YOUR_API_KEY>"`,
-    code:         "authorization_header_format_invalid_code",
+    "shortMessage": "Invalid Authorization header format",
+    "longMessage":  `Invalid Authorization header format. Must be "Bearer <YOUR_API_KEY>"`,
+    "code":         "authorization_header_format_invalid_code",
 }
 ```
 
@@ -47,9 +47,9 @@ Signifies an error when the request is not authorized to perform the given opera
 
 ```json
 {
-    shortMessage: "Unauthorized request",
-    longMessage:  "You are not authorized to perform this request",
-    code:         "authorization_invalid_code",
+    "shortMessage": "Unauthorized request",
+    "longMessage":  "You are not authorized to perform this request",
+    "code":         "authorization_invalid_code",
 }
 ```
 
@@ -59,9 +59,9 @@ Signifies an error when the request does not contain a CSRF token or the given t
 
 ```json
 {
-    shortMessage: "Invalid or missing CSRF token",
-    longMessage:  "To protect against CSRF attacks, the given request must include a valid CSRF token.",
-    code:         "invalid_csrf_token_code",
+    "shortMessage": "Invalid or missing CSRF token",
+    "longMessage":  "To protect against CSRF attacks, the given request must include a valid CSRF token.",
+    "code":         "invalid_csrf_token_code",
 }
 ```
 
@@ -73,9 +73,9 @@ Signifies an error when the incoming request is missing mandatory headers.
 
 ```json
 {
-    shortMessage: "Invalid request headers",
-    longMessage:  "Your Clerk Frontend API is accessible from browsers and native applications. To protect against standard web attacks, the HTTP Origin header is required in browser requests. If you see this error, you probably accessed Clerk Frontend API directly from the address bar or a browser extension is intercepting your browser requests, removing the HTTP Origin header. For more information refer to https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Origin.",
-    code:         "request_header_missing_code",
+    "shortMessage": "Invalid request headers",
+    "longMessage":  "Your Clerk Frontend API is accessible from browsers and native applications. To protect against standard web attacks, the HTTP Origin header is required in browser requests. If you see this error, you probably accessed Clerk Frontend API directly from the address bar or a browser extension is intercepting your browser requests, removing the HTTP Origin header. For more information refer to https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Origin.",
+    "code":         "request_header_missing_code",
 }
 ```
 
@@ -83,9 +83,9 @@ Signifies an error when the incoming request is missing mandatory headers.
 
 ```json
 {
-    shortMessage: "Invalid request headers",
-    longMessage:  "Your Clerk Frontend API is accessible from browsers and native applications. To protect against common web attacks, we require the HTTP Authorization header to be present in native application requests. Make sure the HTTP Authorization header is set a valid Clerk client JWT or set it to an empty string for your first Frontend API request that will return your Clerk client JWT.",
-    code:         "request_header_missing_code",
+    "shortMessage": "Invalid request headers",
+    "longMessage":  "Your Clerk Frontend API is accessible from browsers and native applications. To protect against common web attacks, we require the HTTP Authorization header to be present in native application requests. Make sure the HTTP Authorization header is set a valid Clerk client JWT or set it to an empty string for your first Frontend API request that will return your Clerk client JWT.",
+    "code":         "request_header_missing_code",
 }
 ```
 
@@ -95,9 +95,9 @@ Signifies an error when the origin header of the incoming request is invalid.
 
 ```json
 {
-    shortMessage: "Invalid HTTP Origin header",
-    longMessage:  "The Request HTTP Origin header must be equal to or a subdomain of the requesting URL.",
-    code:         "origin_invalid_code",
+    "shortMessage": "Invalid HTTP Origin header",
+    "longMessage":  "The Request HTTP Origin header must be equal to or a subdomain of the requesting URL.",
+    "code":         "origin_invalid_code",
 }
 ```
 
@@ -107,9 +107,9 @@ Signifies an error when the dev browser is not authenticated.
 
 ```json
 {
-    shortMessage: "Browser unauthenticated",
-    longMessage:  "Unable to authenticate this browser for your development instance. Check your Clerk cookies and try again. If the issue persists reach out to support@clerk.com.",
-    code:         "dev_browser_unauthenticated_code",
+    "shortMessage": "Browser unauthenticated",
+    "longMessage":  "Unable to authenticate this browser for your development instance. Check your Clerk cookies and try again. If the issue persists reach out to support@clerk.com.",
+    "code":         "dev_browser_unauthenticated_code",
 }
 ```
 
@@ -119,9 +119,9 @@ Signifies an error when the incoming request attempts to use an endpoint with UR
 
 ```json
 {
-    shortMessage: "URL-based session syncing is disabled for this instance",
-    longMessage:  "This is a development instance operating with legacy, third-party cookies. To enable URL-based session syncing refer to https://clerk.com/docs/upgrade-guides/url-based-session-syncing.",
-    code:         "url_based_session_syncing_disabled_code",
+    "shortMessage": "URL-based session syncing is disabled for this instance",
+    "longMessage":  "This is a development instance operating with legacy, third-party cookies. To enable URL-based session syncing refer to https://clerk.com/docs/upgrade-guides/url-based-session-syncing.",
+    "code":         "url_based_session_syncing_disabled_code",
 
 }
 ```
@@ -132,9 +132,9 @@ Signifies an error when the incoming request is invalid for given environment(s)
 
 ```json
 {
-    shortMessage: "Invalid request for environment",
-    longMessage:  "Request only valid for <envTypesAsString> instances.",
-    code:         "request_invalid_for_environment_code",
+    "shortMessage": "Invalid request for environment",
+    "longMessage":  "Request only valid for <envTypesAsString> instances.",
+    "code":         "request_invalid_for_environment_code",
 }
 ```
 
@@ -144,9 +144,9 @@ Signifies an error when the incoming request is invalid for the given instance, 
 
 ```json
 {
-    shortMessage: "Invalid request for instance",
-    longMessage:  "This request is not valid for your instance. Modify your instance settings to use this request.",
-    code:         "request_invalid_for_instance_code",
+    "shortMessage": "Invalid request for instance",
+    "longMessage":  "This request is not valid for your instance. Modify your instance settings to use this request.",
+    "code":         "request_invalid_for_instance_code",
 }
 ```
 
@@ -156,9 +156,9 @@ Signifies an error when the incoming request has an invalid host.
 
 ```json
 {
-    shortMessage: "Invalid host",
-    longMessage:  "We were unable to attribute this request to an instance running on Clerk. Make sure that your Clerk Publishable Key is correct.",
-    code:         "host_invalid_code",
+    "shortMessage": "Invalid host",
+    "longMessage":  "We were unable to attribute this request to an instance running on Clerk. Make sure that your Clerk Publishable Key is correct.",
+    "code":         "host_invalid_code",
 }
 ```
 
@@ -170,9 +170,9 @@ Signifies an error when the identifier already exists.
 
 ```json
 {
-    shortMessage: "already exists",
-    longMessage:  "This external account already exists.",
-    code:         "external_account_exists_code",
+    "shortMessage": "already exists",
+    "longMessage":  "This external account already exists.",
+    "code":         "external_account_exists_code",
 }
 ```
 
@@ -180,9 +180,9 @@ Signifies an error when the identifier already exists.
 
 ```json
 {
-    shortMessage: "already exists",
-    longMessage:  "This email address already exists.",
-    code:         "email_address_exists_code",
+    "shortMessage": "already exists",
+    "longMessage":  "This email address already exists.",
+    "code":         "email_address_exists_code",
 }
 ```
 
@@ -190,9 +190,9 @@ Signifies an error when the identifier already exists.
 
 ```json
 {
-    shortMessage: "already exists",
-    longMessage:  "This phone number already exists.",
-    code:         "phone_number_exists_code",
+    "shortMessage": "already exists",
+    "longMessage":  "This phone number already exists.",
+    "code":         "phone_number_exists_code",
 }
 ```
 
@@ -200,9 +200,9 @@ Signifies an error when the identifier already exists.
 
 ```json
 {
-    shortMessage: "already exists",
-    longMessage:  "This username already exists.",
-    code:         "username_exists_code",
+    "shortMessage": "already exists",
+    "longMessage":  "This username already exists.",
+    "code":         "username_exists_code",
 }
 ```
 
@@ -210,9 +210,9 @@ Signifies an error when the identifier already exists.
 
 ```json
 {
-    shortMessage: "already exists",
-    longMessage:  "This SAML account already exists.",
-    code:         "external_account_exists_code",
+    "shortMessage": "already exists",
+    "longMessage":  "This SAML account already exists.",
+    "code":         "external_account_exists_code",
 }
 ```
 
@@ -220,9 +220,9 @@ Signifies an error when the identifier already exists.
 
 ```json
 {
-    shortMessage: "Access not allowed.",
-    longMessage:  "You are not allowed to access this application.",
-    code:         "identifier_not_allowed_access_code",
+    "shortMessage": "Access not allowed.",
+    "longMessage":  "You are not allowed to access this application.",
+    "code":         "identifier_not_allowed_access_code",
 }
 ```
 
@@ -232,9 +232,9 @@ Signifies an error when a user is signed out.
 
 ```json
 {
-    shortMessage: "Signed out",
-    longMessage:  "You are signed out",
-    code:         "signed_out_code",
+    "shortMessage": "Signed out",
+    "longMessage":  "You are signed out",
+    "code":         "signed_out_code",
 }
 ```
 
@@ -244,9 +244,9 @@ Signifies an error where the auth settings of the instance are not well configur
 
 ```json
 {
-    shortMessage: "invalid auth configuration",
-    longMessage:  "The authentication settings are invalid.",
-    code:         "invalid_user_settings_code",
+    "shortMessage": "invalid auth configuration",
+    "longMessage":  "The authentication settings are invalid.",
+    "code":         "invalid_user_settings_code",
 }
 ```
 
@@ -254,8 +254,8 @@ Signifies an error where the auth settings of the instance are not well configur
 
 ```json
 {
-    shortMessage: "invalid handshake",
-    longMessage:  "The handshake request is invalid: <REASON>",
-    code:         "invalid_handshake_code",
+    "shortMessage": "invalid handshake",
+    "longMessage":  "The handshake request is invalid: <REASON>",
+    "code":         "invalid_handshake_code",
 }
 ```
