--- a/docs/errors/backup-codes.mdx
+++ b/docs/errors/backup-codes.mdx
@@ -10,8 +10,8 @@ type: reference
 
 ```json
 {
-    shortMessage: "Backup codes not available",
-    longMessage:  "In order to use backup codes, you have to enable any other Multi-factor method",
-    code:         "backup_codes_not_available_code",
+    "shortMessage": "Backup codes not available",
+    "longMessage":  "In order to use backup codes, you have to enable any other Multi-factor method",
+    "code":         "backup_codes_not_available_code",
 }
 ```
