--- a/docs/errors/billing.mdx
+++ b/docs/errors/billing.mdx
@@ -10,9 +10,9 @@ type: reference
 
 ```json
 {
-    shortMessage: "Checkout is still processing",
-    longMessage:  "Checkout is still processing for application ID <appID>",
-    code:         "checkout_locked_code",
+    "shortMessage": "Checkout is still processing",
+    "longMessage":  "Checkout is still processing for application ID <appID>",
+    "code":         "checkout_locked_code",
 }
 ```
 
@@ -20,9 +20,9 @@ type: reference
 
 ```json
 {
-    shortMessage: "Checkout session ID mismatch",
-    longMessage:  "Application ID <APPID> has no matching checkout session ID <SESSID>",
-    code:         "checkout_session_mismatch_code",
+    "shortMessage": "Checkout session ID mismatch",
+    "longMessage":  "Application ID <APPID> has no matching checkout session ID <SESSID>",
+    "code":         "checkout_session_mismatch_code",
 }
 ```
 
@@ -30,9 +30,9 @@ type: reference
 
 ```json
 {
-    shortMessage: "Unsupported plan features",
-    longMessage:  "Some features are not supported in your current plan. Upgrade your subscription to unlock them.",
-    code:         "unsupported_subscription_plan_features_code",
+    "shortMessage": "Unsupported plan features",
+    "longMessage":  "Some features are not supported in your current plan. Upgrade your subscription to unlock them.",
+    "code":         "unsupported_subscription_plan_features_code",
 }
 ```
 
@@ -40,8 +40,8 @@ type: reference
 
 ```json
 {
-    shortMessage: "Unsupported plan features",
-    longMessage:  "Some application features are not supported in your new plan. Stay with your current plan to avoid breaking changes.",
-    code:         "invalid_subscription_plan_switch_code",
+    "shortMessage": "Unsupported plan features",
+    "longMessage":  "Some application features are not supported in your new plan. Stay with your current plan to avoid breaking changes.",
+    "code":         "invalid_subscription_plan_switch_code",
 }
 ```
