--- a/docs/errors/clients.mdx
+++ b/docs/errors/clients.mdx
@@ -12,9 +12,9 @@ Signifies an error when no client is found with clientID.
 
 ```json
 {
-    shortMessage: "Client not found",
-    longMessage:  "No client was found with id <clientID>",
-    code:         "resource_not_found_code",
+    "shortMessage": "Client not found",
+    "longMessage":  "No client was found with id <clientID>",
+    "code":         "resource_not_found_code",
 }
 ```
 
@@ -24,8 +24,8 @@ Signifies an error when no client is found in an incoming request.
 
 ```json
 {
-    shortMessage: "No client found",
-    longMessage:  "This request is expecting a client and did not find one",
-    code:         "client_not_found_code",
+    "shortMessage": "No client found",
+    "longMessage":  "This request is expecting a client and did not find one",
+    "code":         "client_not_found_code",
 }
 ```
