--- a/docs/errors/cookie.mdx
+++ b/docs/errors/cookie.mdx
@@ -12,9 +12,9 @@ Signifies an error when token is missing claim.
 
 ```json
 {
-    shortMessage: invalidCookieMessage,
-    longMessage:  "The token is missing the following claims: <claims>",
-    code:         "cookie_invalid_code",
+    "shortMessage": invalidCookieMessage,
+    "longMessage":  "The token is missing the following claims: <claims>",
+    "code":         "cookie_invalid_code",
 }
 ```
 
@@ -23,8 +23,8 @@ Signifies an error when cookie is invalid.
 
 ```json
 {
-    shortMessage: "The provided cookie is invalid.",
-    code:         "cookie_invalid_code",
+    "shortMessage": "The provided cookie is invalid.",
+    "code":         "cookie_invalid_code",
 }
 ```
 
@@ -34,8 +34,8 @@ Signifies an error when rotating token does not match the client's rotating toke
 
 ```json
 {
-    shortMessage: invalidCookieMessage,
-    longMessage:  "The client's rotating key does not match the given one <token>",
-    code:         "cookie_invalid_code",
+    "shortMessage": invalidCookieMessage,
+    "longMessage":  "The client's rotating key does not match the given one <token>",
+    "code":         "cookie_invalid_code",
 }
 ```
