--- a/docs/errors/domains.mdx
+++ b/docs/errors/domains.mdx
@@ -12,9 +12,9 @@ Signifies an error when no domain with the given id was found.
 
 ```json
 {
-    shortMessage: "Domain not found",
-    longMessage:  "No domain was found with <id>",
-    code:         "resource_not_found_code",
+    "shortMessage": "Domain not found",
+    "longMessage":  "No domain was found with <id>",
+    "code":         "resource_not_found_code",
 }
 ```
 
@@ -24,9 +24,9 @@ Signifies an error when trying to update an non production instance domain.
 
 ```json
 {
-    shortMessage: "Domain update was forbidden",
-    longMessage:  "Domain can be only updated for production instances",
-    code:         "domain_update_forbidden_code",
+    "shortMessage": "Domain update was forbidden",
+    "longMessage":  "Domain can be only updated for production instances",
+    "code":         "domain_update_forbidden_code",
 }
 ```
 
@@ -34,9 +34,9 @@ Signifies an error when trying to update an non production instance domain.
 
 ```json
 {
-    shortMessage: "operation not allowed",
-    longMessage:  "This operation is not allowed on a satellite domain. Try again using the primary domain of your instance.",
-    code:         "operation_not_allowed_on_satellite_domain_code",
+    "shortMessage": "operation not allowed",
+    "longMessage":  "This operation is not allowed on a satellite domain. Try again using the primary domain of your instance.",
+    "code":         "operation_not_allowed_on_satellite_domain_code",
 }
 ```
 
@@ -44,9 +44,9 @@ Signifies an error when trying to update an non production instance domain.
 
 ```json
 {
-    shortMessage: "operation not allowed",
-    longMessage:  "This operation is not allowed on a primary domain. Try again with a satellite domain of the instance.",
-    code:         "operation_not_allowed_on_primary_domain_code",
+    "shortMessage": "operation not allowed",
+    "longMessage":  "This operation is not allowed on a primary domain. Try again with a satellite domain of the instance.",
+    "code":         "operation_not_allowed_on_primary_domain_code",
 
 }
 ```
@@ -57,9 +57,9 @@ Signifies an error when the nonce that was given during the sync flow is already
 
 ```json 
 {
-    shortMessage: "sync nonce already consumed",
-    longMessage:  "The given sync nonce has already been consumed and cannot be re-used.",
-    code:         "sync_nonce_already_consumed_code",
+    "shortMessage": "sync nonce already consumed",
+    "longMessage":  "The given sync nonce has already been consumed and cannot be re-used.",
+    "code":         "sync_nonce_already_consumed_code",
 }
 ```
 
@@ -70,9 +70,9 @@ Signifies an error when a new domain is added as primary when there is already o
 ```json 
 {
 
-    shortMessage: "primary domain already exists",
-    longMessage:  "Currently, only a single primary domain is supported and the current instance already has one. All new domains need to be set a satellites.",
-    code:         "primary_domain_already_exists_code",
+    "shortMessage": "primary domain already exists",
+    "longMessage":  "Currently, only a single primary domain is supported and the current instance already has one. All new domains need to be set a satellites.",
+    "code":         "primary_domain_already_exists_code",
 }
 ```
 
@@ -80,7 +80,7 @@ Signifies an error when a new domain is added as primary when there is already o
 
 ```json
 {
-    longMessage:  "Clerk Frontend API cannot be accessed through the proxy URL. Make sure your proxy is configured correctly.",
-    code:         "invalid_proxy_configuration_code",
+    "longMessage":  "Clerk Frontend API cannot be accessed through the proxy URL. Make sure your proxy is configured correctly.",
+    "code":         "invalid_proxy_configuration_code",
 }
 ```
