--- a/docs/errors/features.mdx
+++ b/docs/errors/features.mdx
@@ -10,9 +10,9 @@ type: reference
 
 ```json
 {
-    shortMessage: "not enabled",
-    longMessage:  "This feature is not enabled on this instance",
-    code:         "feature_not_enabled_code",
+    "shortMessage": "not enabled",
+    "longMessage":  "This feature is not enabled on this instance",
+    "code":         "feature_not_enabled_code",
 }
 ```
 
@@ -20,9 +20,9 @@ type: reference
 
 ```json
 {
-    shortMessage: "not implemented",
-    longMessage:  "Feature `<feature>` is not available yet",
-    code:         "feature_not_implemented_code",
+    "shortMessage": "not implemented",
+    "longMessage":  "Feature `<feature>` is not available yet",
+    "code":         "feature_not_implemented_code",
 }
 ```
 
@@ -30,8 +30,8 @@ type: reference
 
 ```json
 {
-    shortMessage: "not a Progressive Sign Up instance",
-    longMessage: "<feature> can only be used in instances that migrated to Progressive Sign Up (https://clerk.com/docs/upgrade-guides/progressive-sign-up)",
-    code: "feature_requires_psu_code",
+    "shortMessage": "not a Progressive Sign Up instance",
+    "longMessage": "<feature> can only be used in instances that migrated to Progressive Sign Up (https://clerk.com/docs/upgrade-guides/progressive-sign-up)",
+    "code": "feature_requires_psu_code",
 }
 ```
