--- a/docs/errors/sign-in.mdx
+++ b/docs/errors/sign-in.mdx
@@ -8,91 +8,91 @@ type: reference
 
 ## `SingleModeSessionExists`
 {
-    shortMessage: "Session already exists",
-    longMessage:  "You're currently in single session mode. You can only be signed into one account at a time.",
-    code:         session_exists,
+    "shortMessage": "Session already exists",
+    "longMessage":  "You're currently in single session mode. You can only be signed into one account at a time.",
+    "code":         session_exists,
 }
 
 ## `AlreadySignedIn`
 {
-    shortMessage: "You're already signed in",
-    code:         "identifier_already_signed_in",
+    "shortMessage": "You're already signed in",
+    "code":         "identifier_already_signed_in",
     meta:         {
-        SessionID: "<session_id>",
+        SessionID: "<session ID>",
     },
 }
 
 ## `AccountTransferInvalid`
 {
-    shortMessage: "Invalid account transfer",
-    longMessage:  "There is no account to transfer",
-    code:         "account_transfer_invalid",
+    "shortMessage": "Invalid account transfer",
+    "longMessage":  "There is no account to transfer",
+    "code":         "account_transfer_invalid",
 }
 
 ## `InvalidClientStateForAction`
 {
-    shortMessage: "Invalid action",
-    longMessage:  "We were unable to complete %s for this Client. %s",
-    code:         "client_state_invalid",
+    "shortMessage": "Invalid action",
+    "longMessage":  "We were unable to complete %s for this Client. %s",
+    "code":         "client_state_invalid",
 }
 
 ## `InvalidStrategyForUser`
 {
-    shortMessage: "Invalid verification strategy",
-    longMessage:  "The verification strategy is not valid for this account",
-    code:         "strategy_for_user_invalid",
+    "shortMessage": "Invalid verification strategy",
+    "longMessage":  "The verification strategy is not valid for this account",
+    "code":         "strategy_for_user_invalid",
 }
 
 ## `IdentificationClaimed`
 {
-    shortMessage: "Identification claimed by another user",
-    longMessage:  "One or more identifiers on this sign up have since been connected to a different User. Please sign up again.",
-    code:         "identification_claimed",
+    "shortMessage": "Identification claimed by another user",
+    "longMessage":  "One or more identifiers on this sign up have since been connected to a different User. Please sign up again.",
+    "code":         "identification_claimed",
 }
 
 ## `MutationOnOlderSignInNotAllowed`
 {
-    shortMessage: "Update operations are not allowed on older sign ins",
-    code:         "resource_forbidden",
+    "shortMessage": "Update operations are not allowed on older sign ins",
+    "code":         "resource_forbidden",
 }
 
 ## `SignInNotFound`
 {
-    shortMessage: "not found",
-    longMessage:  "No sign in was found with id <signInID>",
-    code:         "resource_not_found",
+    "shortMessage": "not found",
+    "longMessage":  "No sign in was found with id <signInID>",
+    "code":         "resource_not_found",
 }
 
 ## `IdentificationBelongsToDifferentUser`
 {
-    shortMessage: "belongs to different user",
-    longMessage:  "The given identification belongs to a different user.",
-    code:         "resource_forbidden",
+    "shortMessage": "belongs to different user",
+    "longMessage":  "The given identification belongs to a different user.",
+    "code":         "resource_forbidden",
 }
 
 ## `NoSecondFactorsForStrategy`
 ```json
 {
-    shortMessage: "no second factors",
-    longMessage:  "No second factors were found for strategy <strategy>.",
-    code:         "no_second_factors",
+    "shortMessage": "no second factors",
+    "longMessage":  "No second factors were found for strategy <strategy>.",
+    "code":         "no_second_factors",
 }
 ```
 
 ## `SignInNoIdentificationForUser`
 ```json
 {
-    shortMessage: "no identification for user",
-    longMessage:  "The given token doesn't have an associated identification for the user who created it.",
-    code:         "sign_in_no_identification_for_user",
+    "shortMessage": "no identification for user",
+    "longMessage":  "The given token doesn't have an associated identification for the user who created it.",
+    "code":         "sign_in_no_identification_for_user",
 }
 ```
 
 ## `SignInIdentificationOrUserDeleted`
 ```json
 {
-    shortMessage: "identification or user deleted",
-    longMessage:  "Either the user or the selected identification were deleted. Please start over.",
-    code:         "sign_in_identification_or_user_deleted",
+    "shortMessage": "identification or user deleted",
+    "longMessage":  "Either the user or the selected identification were deleted. Please start over.",
+    "code":         "sign_in_identification_or_user_deleted",
 }
 ```
