insert value to show ID but still be valid JSON

--- a/docs/errors/allowlist-identifiers.mdx
+++ b/docs/errors/allowlist-identifiers.mdx
@@ -11,7 +11,7 @@ type: reference
 ```json
 {
     "shortMessage": "Identifier not found",
-    "longMessage":  "No identifier was found with id " + identifierID,
+    "longMessage":  "No identifier was found with id <identifierID>",
     "code":         "resource_not_found_code",
 }
 ```
