--- a/docs/errors/allowlist-identifiers.mdx
+++ b/docs/errors/allowlist-identifiers.mdx
@@ -12,6 +12,6 @@ type: reference
 {
     "shortMessage": "Identifier not found",
     "longMessage":  "No identifier was found with id <identifierID>",
-    "code":         "resource_not_found_code",
+    "code":         "resource_not_found_code"
 }
 ```
