--- a/docs/errors/auth.mdx
+++ b/docs/errors/auth.mdx
@@ -36,7 +36,7 @@ Signifies an error when the Authorization header has no proper format.
 ```json
 {
     "shortMessage": "Invalid Authorization header format",
-    "longMessage":  `Invalid Authorization header format. Must be "Bearer <YOUR_API_KEY>"`,
+    "longMessage":  "Invalid Authorization header format. Must be 'Bearer <YOUR_API_KEY>'",
     "code":         "authorization_header_format_invalid_code",
 }
 ```
@@ -234,7 +234,7 @@ Signifies an error when a user is signed out.
 {
     "shortMessage": "Signed out",
     "longMessage":  "You are signed out",
-    "code":         "signed_out_code",
+    "code":         "signed_out_code"
 }
 ```
 
@@ -246,7 +246,7 @@ Signifies an error where the auth settings of the instance are not well configur
 {
     "shortMessage": "invalid auth configuration",
     "longMessage":  "The authentication settings are invalid.",
-    "code":         "invalid_user_settings_code",
+    "code":         "invalid_user_settings_code"
 }
 ```
 
@@ -256,6 +256,6 @@ Signifies an error where the auth settings of the instance are not well configur
 {
     "shortMessage": "invalid handshake",
     "longMessage":  "The handshake request is invalid: <REASON>",
-    "code":         "invalid_handshake_code",
+    "code":         "invalid_handshake_code"
 }
 ```
