--- a/docs/errors/billing-accounts.mdx
+++ b/docs/errors/billing-accounts.mdx
@@ -12,7 +12,7 @@ type: reference
 {
     "shortMessage": "Billing account not found",
     "longMessage":  "No billing account was found with ID <baID>",
-    "code":         "resource_not_found_code",
+    "code":         "resource_not_found_code"
 }
 ```
 
@@ -22,7 +22,7 @@ type: reference
 {
     "shortMessage": "Billing account not accessible",
     "longMessage": "Billing account <baID> is not accessible by user <userID>",
-    "code": "billing_account_not_accessible_code",
+    "code": "billing_account_not_accessible_code"
 }
 ```
 
@@ -32,6 +32,6 @@ type: reference
 {
     "shortMessage": "Billing account without customer ID",
     "longMessage":  "Billing account <baID> does not have a Stripe Customer ID",
-    "code":         "billing_account_without_customer_id_code",
+    "code":         "billing_account_without_customer_id_code"
 }
 ```
