--- a/docs/errors/billing.mdx
+++ b/docs/errors/billing.mdx
@@ -12,7 +12,7 @@ type: reference
 {
     "shortMessage": "Checkout is still processing",
     "longMessage":  "Checkout is still processing for application ID <appID>",
-    "code":         "checkout_locked_code",
+    "code":         "checkout_locked_code"
 }
 ```
 
@@ -22,7 +22,7 @@ type: reference
 {
     "shortMessage": "Checkout session ID mismatch",
     "longMessage":  "Application ID <APPID> has no matching checkout session ID <SESSID>",
-    "code":         "checkout_session_mismatch_code",
+    "code":         "checkout_session_mismatch_code"
 }
 ```
 
@@ -32,7 +32,7 @@ type: reference
 {
     "shortMessage": "Unsupported plan features",
     "longMessage":  "Some features are not supported in your current plan. Upgrade your subscription to unlock them.",
-    "code":         "unsupported_subscription_plan_features_code",
+    "code":         "unsupported_subscription_plan_features_code"
 }
 ```
 
@@ -42,6 +42,6 @@ type: reference
 {
     "shortMessage": "Unsupported plan features",
     "longMessage":  "Some application features are not supported in your new plan. Stay with your current plan to avoid breaking changes.",
-    "code":         "invalid_subscription_plan_switch_code",
+    "code":         "invalid_subscription_plan_switch_code"
 }
 ```
