--- a/docs/errors/comms.mdx
+++ b/docs/errors/comms.mdx
@@ -46,7 +46,7 @@ Signifies an error when trying to delete the last identification associated with
 {
     "shortMessage": "Update failed",
     "longMessage":  "You cannot set your last identification as second factor.",
-    "code":         "identification_set_for2_f_a_failed_code",
+    "code":         "identification_set_for2_f_a_failed_code"
 }
 ```
 
@@ -56,6 +56,6 @@ Signifies an error when trying to delete the last identification associated with
 {
     "shortMessage": "Update failed",
     "longMessage":  "Cannot update second factor attributes for unverified identification",
-    "code":         "identification_update_second_factor_unverified",
+    "code":         "identification_update_second_factor_unverified"
 }
 ```
