--- a/docs/errors/db.mdx
+++ b/docs/errors/db.mdx
@@ -12,6 +12,6 @@ type: reference
 {
     "shortMessage": "duplicate allowlist identifier",
     "longMessage":  "the identifier <identifier> already exists",
-    "code":         "duplicate_record_code",
+    "code":         "duplicate_record_code"
 }
 ```
