--- a/docs/errors/entitlements.mdx
+++ b/docs/errors/entitlements.mdx
@@ -14,7 +14,7 @@ Signifies an error when no domain with the given id was found.
 {
     "shortMessage": "invalid key format",
     "longMessage": "<value> cannot be used as an entitlement key. An entitlement key should have the following format: <scope>:<feature> Both `scope` and `feature` should only contain alphanumeric characters without any spaces.",
-    "code": "form_invalid_entitlement_key_code",
+    "code": "form_invalid_entitlement_key_code"
 }
 ```
 
@@ -25,6 +25,6 @@ Signifies an error when no domain with the given id was found.
 
     "shortMessage": "already associated",
     "longMessage":  "The given entitlement is already associated with the product.",
-    "code":         "entitlement_already_associated_code",
+    "code":         "entitlement_already_associated_code"
 }
 ```
