--- a/docs/errors/sign-in-tokens.mdx
+++ b/docs/errors/sign-in-tokens.mdx
@@ -6,48 +6,47 @@ type: reference
 
 # Sign in tokens errors index
 
-
 ## `SignInTokenRevoked`
 ```json
 {
- "shortMessage": "sign in token has been revoked"
- "longMessage": "This sign in token has been revoked and cannot be used anymore."
- "code": "sign_in_token_revoked_code"
+  "shortMessage": "sign in token has been revoked",
+  "longMessage": "This sign in token has been revoked and cannot be used anymore.",
+  "code": "sign_in_token_revoked_code"
 }
 ```
 
 ## `SignInTokenAlreadyUsed`
 ```json
 {
- "shortMessage": "sign in token has already been used"
- "longMessage": "This sign in token has already been used. Each token can only be used once."
- "code": "sign_in_token_already_used_code"
+  "shortMessage": "sign in token has already been used",
+  "longMessage": "This sign in token has already been used. Each token can only be used once.",
+  "code": "sign_in_token_already_used_code"
 }
 ```
 
 ## `SignInTokenCannotBeUsed`
 ```json
 {
- "shortMessage": "sign in token cannot be used"
- "longMessage": "This sign in token cannot be used anymore. Please request a new one."
- "code": "sign_in_token_cannot_be_used_code"
+  "shortMessage": "sign in token cannot be used",
+  "longMessage": "This sign in token cannot be used anymore. Please request a new one.",
+  "code": "sign_in_token_cannot_be_used_code"
 }
 ```
 
 ## `SignInTokenCanBeUsedOnlyInSignIn`
 ```json
 {
- "shortMessage": "not in sign in"
- "longMessage": "Sign in tokens can only be used during sign in."
- "code": "sign_in_token_not_in_sign_in_code"
+  "shortMessage": "not in sign in",
+  "longMessage": "Sign in tokens can only be used during sign in.",
+  "code": "sign_in_token_not_in_sign_in_code"
 }
 ```
 
 ## `SignInTokenCannotBeRevoked`
 ```json
 {
- "shortMessage": "cannot revoke"
- "longMessage": "Sign in token cannot be revoked because its status is %s. Only pending tokens can be revoked."
- "code": "sign_in_token_cannot_be_revoked_code"
+  "shortMessage": "cannot revoke",
+  "longMessage": "Sign in token cannot be revoked because its status is <status>. Only pending tokens can be revoked.",
+  "code": "sign_in_token_cannot_be_revoked_code"
 }
 ```
