--- a/docs/errors/applications.mdx
+++ b/docs/errors/applications.mdx
@@ -12,9 +12,9 @@ Signifies an error when no application with given appID was found.
 
 ```json
 {
-    shortMessage: "Application not found",
-    longMessage:  "No application was found with id " + appID,
-    code:         "resource_not_found_code",
+    "shortMessage": "Application not found",
+    "longMessage":  "No application was found with id <appID>",
+    "code":         "resource_not_found_code"
 }
 ```
 
@@ -25,9 +25,9 @@ Signifies an error when trying to delete a system application.
 
 ```json 
 {
-    shortMessage: "Unauthorized request",
-    longMessage:  "You are not authorized to delete system application " + applicationID,
-    code:         "authorization_invalid_code",
+    "shortMessage": "Unauthorized request",
+    "longMessage":  "You are not authorized to delete system application <applicationID>",
+    "code":         "authorization_invalid_code"
 }
 ```
 
@@ -37,9 +37,9 @@ Signifies an error when trying to move an application to an organization that th
 
 ```json 
 {
-    shortMessage: "unauthorized request",
-    longMessage: "You need to be a member of organization <OrgID>, in order to move application <AppID>.",
-    code: "authorization_invalid_code",
+    "shortMessage": "unauthorized request",
+    "longMessage": "You need to be a member of organization <OrgID>, in order to move application <AppID>.",
+    "code": "authorization_invalid_code"
 }
 ```
 
@@ -47,9 +47,9 @@ Signifies an error when trying to move an application to an organization that th
 
 ```json 
 {
-    shortMessage: "already belongs to organization",
-    longMessage:  "Application already belongs to the selected organization.",
-    code:         "application_already_belongs_to_organization_code",
+    "shortMessage": "already belongs to organization",
+    "longMessage":  "Application already belongs to the selected organization.",
+    "code":         "application_already_belongs_to_organization_code"
 }
 ```
 
@@ -57,9 +57,9 @@ Signifies an error when trying to move an application to an organization that th
 
 ```json 
 {
-    shortMessage: "already belongs to user",
-    longMessage:  "Application already belongs to the given user.",
-    code:         "application_already_belongs_to_user_code",
+    "shortMessage": "already belongs to user",
+    "longMessage":  "Application already belongs to the given user.",
+    "code":         "application_already_belongs_to_user_code"
 }
 ```
 
@@ -71,7 +71,7 @@ Returned when an invalid plan is selected for a resource.
 {
     "shortMessage": "Invalid plan",
     "longMessage":  "Plan <planID> can't be selected for <resourceType> <resourceID>", 
-    "code":         "invalid_plan",
+    "code":         "invalid_plan"
 }
 ```
 
@@ -81,7 +81,7 @@ Returned when an invalid plan is selected for a resource.
 {
     "shortMessage": "cannot transfer paid application, missing billing info",
     "longMessage":  "Paid applications can only be transferred to personal workspaces or organizations with billing info. Add the necessary billing info and try again.",
-    "code":         "transfer_paid_app_to_free_account_code",
+    "code":         "transfer_paid_app_to_free_account_code"
 }
 ```
 
@@ -91,6 +91,6 @@ Returned when an invalid plan is selected for a resource.
 {
     "shortMessage": "cannot transfer paid application, missing payment method",
     "longMessage":  "The selected account doesn't have any payment methods associated with it.",
-    "code":       "transfer_paid_app_to_account_with_no_payment_method_code",
+    "code":       "transfer_paid_app_to_account_with_no_payment_method_code"
 }
 ```
