--- a/docs/errors/backup-codes.mdx
+++ b/docs/errors/backup-codes.mdx
@@ -12,6 +12,6 @@ type: reference
 {
     "shortMessage": "Backup codes not available",
     "longMessage":  "In order to use backup codes, you have to enable any other Multi-factor method",
-    "code":         "backup_codes_not_available_code",
+    "code":         "backup_codes_not_available_code"
 }
 ```
