--- a/docs/errors/sign-in.mdx
+++ b/docs/errors/sign-in.mdx
@@ -7,75 +7,93 @@ type: reference
 # Sign in errors index
 
 ## `SingleModeSessionExists`
+```json
 {
     "shortMessage": "Session already exists",
     "longMessage":  "You're currently in single session mode. You can only be signed into one account at a time.",
-    "code":         session_exists,
+    "code":         "session_exists",
 }
+```
 
 ## `AlreadySignedIn`
+```json
 {
     "shortMessage": "You're already signed in",
     "code":         "identifier_already_signed_in",
-    meta:         {
-        SessionID: "<session ID>",
+    "meta":         {
+        "SessionID": "<session ID>"
     },
 }
+```
 
 ## `AccountTransferInvalid`
+```json
 {
     "shortMessage": "Invalid account transfer",
     "longMessage":  "There is no account to transfer",
-    "code":         "account_transfer_invalid",
+    "code":         "account_transfer_invalid"
 }
+```
 
 ## `InvalidClientStateForAction`
+```json
 {
     "shortMessage": "Invalid action",
     "longMessage":  "We were unable to complete %s for this Client. %s",
-    "code":         "client_state_invalid",
+    "code":         "client_state_invalid"
 }
+```
 
 ## `InvalidStrategyForUser`
+```json
 {
     "shortMessage": "Invalid verification strategy",
     "longMessage":  "The verification strategy is not valid for this account",
-    "code":         "strategy_for_user_invalid",
+    "code":         "strategy_for_user_invalid"
 }
+```
 
 ## `IdentificationClaimed`
+```json
 {
     "shortMessage": "Identification claimed by another user",
     "longMessage":  "One or more identifiers on this sign up have since been connected to a different User. Please sign up again.",
-    "code":         "identification_claimed",
+    "code":         "identification_claimed"
 }
+```
 
 ## `MutationOnOlderSignInNotAllowed`
+```json
 {
     "shortMessage": "Update operations are not allowed on older sign ins",
-    "code":         "resource_forbidden",
+    "code":         "resource_forbidden"
 }
+```
 
 ## `SignInNotFound`
+```json
 {
     "shortMessage": "not found",
     "longMessage":  "No sign in was found with id <signInID>",
-    "code":         "resource_not_found",
+    "code":         "resource_not_found"
 }
+```
 
 ## `IdentificationBelongsToDifferentUser`
+```json
 {
     "shortMessage": "belongs to different user",
     "longMessage":  "The given identification belongs to a different user.",
-    "code":         "resource_forbidden",
+    "code":         "resource_forbidden"
 }
+```
 
 ## `NoSecondFactorsForStrategy`
 ```json
 {
     "shortMessage": "no second factors",
     "longMessage":  "No second factors were found for strategy <strategy>.",
-    "code":         "no_second_factors",
+    "code":         "no_second_factors"
 }
 ```
 
@@ -84,7 +102,7 @@ type: reference
 {
     "shortMessage": "no identification for user",
     "longMessage":  "The given token doesn't have an associated identification for the user who created it.",
-    "code":         "sign_in_no_identification_for_user",
+    "code":         "sign_in_no_identification_for_user"
 }
 ```
 
@@ -93,6 +111,6 @@ type: reference
 {
     "shortMessage": "identification or user deleted",
     "longMessage":  "Either the user or the selected identification were deleted. Please start over.",
-    "code":         "sign_in_identification_or_user_deleted",
+    "code":         "sign_in_identification_or_user_deleted"
 }
 ```
