Added to manifest

--- a/docs/errors/deprecation.mdx
+++ b/docs/errors/deprecation.mdx
@@ -11,7 +11,7 @@ type: reference
 ```json
 {
     "shortMessage": "endpoint is deprecated and pending removal",
-    "longMessage":  "<Message>",
+    "longMessage":  "<DeprecationMessage>",
     "code":         "api_operation_deprecated_code"
 }
 ```
