combine two steps in the quickstart into one 'make a header' step

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -168,107 +168,47 @@ Access your app to verify that authentication is enabled:
 3. Sign up to gain access to your application.
 4. Log into your new account. You should be able to access it now.
 
-### Hide content from signed out users
+### Make a header with Clerk components
 
-You can control which content signed in and signed out users can see with Clerk's [prebuilt components](/docs/components/overview). For this app, we'll use:
+You can control which content signed in and signed out users can see with Clerk's [prebuilt components](/docs/components/overview). To get started, we'll make a header where users can sign in or out. To do this, we'll use:
 
 - [`<SignedIn>`](/docs/components/control/signed-in): Children of this component can only be seen while **signed in**.
 - [`<SignedOut>`](/docs/components/control/signed-in): Children of this component can only be seen while **signed out**.
+- [`<UserButton />`](/docs/components/user/user-button), a [prebuilt component](/docs/components/overview) that comes styled out of the box to show the avatar from the account the user is signed in with.
+- [`<SignInButton />`(/docs/components/unstyled/sign-in-button)], an unstyled component.
 
 Add the following code to your page component to hide some of its content:
 
 <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
 ```tsx filename="app/page.tsx" {1,6-11}
-import { SignedIn, SignedOut } from "@clerk/nextjs";
+import { SignedIn, SignedOut, SignInButton, UserButton } from "@clerk/nextjs";
 
 export default function Home() {
   return (
-    <div>
+    <header>
       <SignedOut>
-        <p>Only signed out users can see this.</p>
+        <SignInButton />
       </SignedOut>
       <SignedIn>
-        <p>Only signed in users can see this.</p>
+        <UserButton />
       </SignedIn>
-    </div>
+    </header>
   )
 }
 ```
 ```tsx filename="pages/index.tsx" {1,6-11}
-import { SignedIn, SignedOut } from "@clerk/nextjs";
+import { SignedIn, SignedOut, SignInButton, UserButton } from "@clerk/nextjs";
 
 export default function Home() {
   return (
-    <div>
-      <SignedOut>
-        <p>Only signed out users can see this.</p>
-      </SignedOut>
-      <SignedIn>
-        <p>Only signed in users can see this.</p>
-      </SignedIn>
-    </div>
-  );
-}
-``` 
-</CodeBlockTabs>
-
-Now visit your app at [`localhost:3000`](http://localhost:3000) while logged in or logged out. The content of the page should change based on your authentication status.
-
-### Embed `<UserButton />` and `<SignInButton />`
-
-To quickly add a sign-in button to your app with Clerk, you can use:
-
-- [`<UserButton />`](/docs/components/user/user-button), a [prebuilt component](/docs/components/overview) that comes styled out of the box to show the avatar from the account the user is signed in with.
-- [`<SignInButton />`(/docs/components/unstyled/sign-in-button)], an unstyled component.
-
-Both allow users to log in, log out, and manage their account information.
-
-Use the following code to add `<UserButton />` and `<SignInButton />` to your app: 
-
-<CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-```tsx filename="app/page.tsx" {1,7,9-13,16}
-import { SignInButton, SignedIn, SignedOut, UserButton } from "@clerk/nextjs";
-
-export default function Home() {
-  return (
-    <div>
+    <header>
       <SignedOut>
         <SignInButton />
-        <p>Only signed out users can see this.</p>
-        <SignInButton>
-          <button>
-            You can also wrap SignInButton around button elements
-          </button>
-        </SignInButton>
       </SignedOut>
       <SignedIn>
         <UserButton />
-        <p>Only signed in users can see this.</p>
       </SignedIn>
-    </div>
-  )
-}
-```
-```tsx filename="pages/index.tsx" {1,7,9-13,16}
-import { SignInButton, SignedIn, SignedOut, UserButton } from "@clerk/nextjs";
-
-export default function Home() {
-  return (
-    <div>
-      <SignedOut>
-        <SignInButton />
-        <p>Only signed out users can see this.</p>
-        <SignInButton>
-          <button>
-            You can also wrap SignInButton around button elements
-          </button>
-        </SignInButton>
-      </SignedOut>
-      <SignedIn>
-        <UserButton />
-        <p>Only signed in users can see this.</p>
-      </SignedIn>
-    </div>
+    </header>
   );
 }
 ``` 
