use an before .env

--- a/docs/integrations/databases/convex.mdx
+++ b/docs/integrations/databases/convex.mdx
@@ -111,7 +111,7 @@ Install Clerk's React SDK by running the following command in your terminal:
 
 ### Set environment keys
 
-In your React project's root folder, you may have a `.env.local` file alongside `package.json` and other configuration files. If you don't see it, create it.
+In your React project's root folder, you may have an `.env.local` file alongside `package.json` and other configuration files. If you don't see it, create it.
 
 Add the following code to your `.env.local` file to set your public key.
 
