--- a/docs/guides/authjs-migration.mdx
+++ b/docs/guides/authjs-migration.mdx
@@ -319,7 +319,7 @@ This walkthrough will help you move user data from your existing database to Cle
 To retain the user data in your database for easy querying, check out the documentation on [data synchronization with webhooks](/docs/integrations/webhooks/sync-data).
 
 1. Clone `github.com/clerk/migration-script`
-2. Create a `.env` file in the root of the cloned repository with the `CLERK_SECRET_KEY` **of your `Production` instance**.
+2. Create an `.env` file in the root of the cloned repository with the `CLERK_SECRET_KEY` **of your `Production` instance**.
 3. Export all the user data from your database into a `users.json` file. The file should be in the following format:
 ```json filename="users.json"
 [
