--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -29,7 +29,7 @@ Once you have a Remix application ready, you need to install Clerk's Remix SDK. 
 
 ### Set environment keys
 
-Below is an example of a `.env.local` file. 
+Below is an example of an `.env.local` file. 
 
 **Pro tip!** If you are signed into your Clerk Dashboard, your secret key should become visible by clicking on the eye icon. Otherwise, you can find your keys in the Clerk Dashboard on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page.
 
