--- a/docs/references/redwood/overview.mdx
+++ b/docs/references/redwood/overview.mdx
@@ -26,7 +26,7 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 
 ### Set environment keys
 
-Below is an example of a `.env.local` file. 
+Below is an example of an `.env.local` file. 
 
 **Pro tip!** If you are signed into your Clerk Dashboard, your secret key should become visible by clicking on the eye icon. Otherwise, you can find your keys in the Clerk Dashboard on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page.
 
